--- a/respo/config-client-dev.properties
+++ b/respo/config-client-dev.properties
@@ -1,6 +1,6 @@
 
 democonfigclient.message=hello spring io
-
+presentconfig=one123wxl111
 # routes to serviceId
 # routes to url
 # zuul.routes.api-a-url.path=/userapi/**
