--- a/respo/config-dev.properties
+++ b/respo/config-dev.properties
@@ -1,6 +1,6 @@
 
 democonfigclient.message=hello spring io
-presentconfig=one123wxl111
+presentconfig=wxl test
 # routes to serviceId
 # routes to url
 # zuul.routes.api-a-url.path=/userapi/**
