--- a/respo/redis-dev.yml
+++ b/respo/redis-dev.yml
@@ -1,1 +1,16 @@
 
+#redis配置
+jedis:
+  pool:
+    # Redis服务器地址 仿真
+    host: 10.25.24.137
+    # Redis服务器连接端口
+    port: 6379
+    password: y2iaciej
+    config:
+      # 最大链接数
+      maxTotal: 200
+      # 连接池中的最大空闲连接
+      maxIdle: 10
+      # 连接池最大连接数（使用负值表示没有限制）
+      maxWaitMillis: 100000
