--- a/respo/kafka-dev.yml
+++ b/respo/kafka-dev.yml
@@ -1,1 +1,14 @@
 
+#Kafka配置
+kafka:
+  consumer:
+    config:
+      timeout: 15000
+      concurrency: 3
+      servers: 10.253.106.164:9092
+      msginterval: 100
+      msgtimeout: 15000
+      presentGroup: presentGroup
+      offset: earliest
+    topic:
+      registerComplete: registerComplete
