--- a/respo/stock-dev.yml
+++ b/respo/stock-dev.yml
@@ -1,3 +1,83 @@
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+#server:
+#  port: 7762
+#spring:
+#feign:
+#    hystrix:
+#     enabled: true
+#
+#hystrix:
+#   command:
+#       default:
+#           execution:
+#               isolation:
+#                   thread:
+#                       timeoutInMilliseconds: 10000
+
+
+
+#公共配置
+server:
+  #端口号
+  port: 80
+  context-path: /
+spring:
+  #激活哪一个环境的配置文件
+  application:
+    name: stock-service
+  profiles:
+    active: dev
+  #数据源
+  datasource:
+    stock:
+      # mysql驱动
+      driverClassName: com.mysql.jdbc.Driver
+      # oracle驱动
+      # driverClassName: oracle.jdbc.driver.OracleDriver
+      # 使用druid数据源
+      type: com.alibaba.druid.pool.DruidDataSource
+      # 下面为连接池的补充设置，应用到上面所有数据源中
+      # 初始化大小，最小，最大
+      initialSize: 5
+      minIdle: 5
+      maxActive: 20
+      # 配置获取连接等待超时的时间
+      maxWait: 60000
+      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+      timeBetweenEvictionRunsMillis: 60000
+      # 配置一个连接在池中最小生存的时间，单位是毫秒
+      minEvictableIdleTimeMillis: 300000
+      validationQuery: SELECT 1 FROM DUAL
+      testWhileIdle: true
+      testOnBorrow: false
+      testOnReturn: false
+      # 打开PSCache，并且指定每个连接上PSCache的大小
+      poolPreparedStatements: true
+      maxPoolPreparedStatementPerConnectionSize: 20
+      # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+      filters: stat,wall,log4j
+      # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
+      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
+
+#mybatis配置开启驼峰匹配
+mybatis:
+  type-aliases-package: com.ztzq.stock.beans
+  mapper-locations: classpath:mapper/*.xml
+  config-location: classpath:mybatis/mybatis-config.xml
+  mapUnderscoreToCamelCase: true
+
+#分页插件
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
+
+
 
 ---
 #开发环境配置
@@ -13,3 +93,19 @@ spring:
       url: jdbc:mysql://10.25.24.137:3306/stock?useUnicode=true&characterEncoding=utf-8&useSSL=true&autoReconnect=true
       username: root
       password: y2iaciej
+#redis配置
+jedis:
+  pool:
+    # Redis服务器地址
+    host: 10.25.24.137
+    # Redis服务器连接端口
+    port: 6379
+    # Redis服务器连接密码（默认为空）
+    password: y2iaciej
+    config:
+      # 最大链接数
+      maxTotal: 200
+      # 连接池中的最大空闲连接
+      maxIdle: 10
+      # 连接池最大连接数（使用负值表示没有限制）
+      maxWaitMillis: 100000
