--- a/respo/user-dev.yml
+++ b/respo/user-dev.yml
@@ -1,9 +1,34 @@
 
 
-test1: value1
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://10.25.24.137:8761/eureka/,http://10.29.181.16:8761/eureka/
+#test1: value1
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://10.25.24.137:8761/eureka/,http://10.29.181.16:8761/eureka/
+      
+      
+---
+#开发环境配置
+server:
+  #端口
+  port: 1080
+spring:
+  profiles: dev
+#redis配置
+jedis:
+  pool:
+    # Redis服务器地址 仿真
+    host: 10.25.24.137
+    # Redis服务器连接端口
+    port: 6379
+    password: y2iaciej
+    config:
+      # 最大链接数
+      maxTotal: 200
+      # 连接池中的最大空闲连接
+      maxIdle: 10
+      # 连接池最大连接数（使用负值表示没有限制）
+      maxWaitMillis: 100000
+
 
 
